# upstage_assignment

./: README.md  ensemble.sh  inference.sh  optimize.sh  pyproject.toml  train.sh
data/: valid_data.csv
notebooks/: 01.EDA.ipynb  02.Result_Analysis.ipynb
src/: config.py  dataset.py  ensemble.py  inference.py  loss.py  metrics.py  model.py  optimize.py  train.py
src/tools/: utils.py
