[tool.poetry]
name = "upstage-assignment"
version = "0.1.0"
description = ""
authors = ["sora kim <icon_o_clast@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"
torch = "^2.5.1"
transformers = "^4.47.1"
scikit-learn = "^1.6.0"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
